# backlinks-QA

./: .env.cyberpanel.example  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_drop_dashboard_matviews.py  0003_google_sheets.py  0004_link_identity_duplicates.py  0005_index_checks.py  0006_report_versioning.py  (+53 more)
backend/app/: __init__.py  main.py
backend/scripts/: backfill_fragment_normalization.py  backfill_gbp_dedup_exclusion.py  entrypoint.sh  test_proxy.py  test_sheets.py
backend/tests/: conftest.py  test_analytics.py  test_analytics_filters.py  test_analytics_kpi.py  test_api.py  test_batch_rollback.py  test_batch_system.py  test_brief_gaps.py  test_canonical.py  test_checks.py  test_conflict.py  test_date_types.py  test_domain_enrichment.py  test_domain_metrics.py  test_duplicate_service.py  test_duplicates_enterprise.py  test_fetch.py  test_final_batch2.py  test_final_batch3.py  test_final_batch4.py  test_final_loop2.py  test_final_loop3.py  test_final_loop5.py  test_final_loop6.py  test_final_phase.py  test_finalization_pass.py  test_gmail.py  test_import_tolerance.py  test_intern_role.py  test_link_history.py  test_link_type_merge.py  test_link_type_merge_exec.py  test_login_ip.py  test_normalize.py  test_notification_prefs.py  test_parse.py  test_pdf_viewer.py  test_project_settings.py  test_qa_engine.py  test_qa_lab_scoring.py  (+19 more)
(+230 files in other folders)
